[package]
name = "klotski"
version = "0.1.0"
authors = ["Jorge Yanar <jorgeyanar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"

[[bin]]
name = "klotski"
path = "klotski.rs"
